fix divers (gap, taille img, i heart, align nbr)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -474,7 +474,6 @@ header div img {
 .blockExplore button {
   color: white;
   border: 0px;
-  background: rgb(255, 121, 218);
   background: linear-gradient(163deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
   box-shadow: 0px 0px 10px rgb(153, 153, 153);
   font-size: 85%;
@@ -484,7 +483,7 @@ header div img {
 
 .blockFonctionnement {
   background-color: white;
-  padding: 50px 30px;
+  padding: 50px 35px;
 }
 .blockFonctionnement .cardsFonctionnement {
   margin-top: 20px;
@@ -500,12 +499,16 @@ header div img {
   border-radius: 15px;
   padding: 15px 10px;
   background: rgb(237, 237, 237);
+  position: relative;
 }
 .blockFonctionnement .cardsFonctionnement__step p {
+  width: 20px;
+  height: 20px;
   margin-top: 4px;
   position: absolute;
   font-size: 10px;
-  left: 20px;
+  left: -10px;
+  top: calc(50% - 13px);
   color: white;
   background: #9356DC;
   padding: 3px 7px;
@@ -528,11 +531,57 @@ header div img {
 
 .blockRestaurants {
   background-color: rgb(250, 250, 250);
-  height: 615px;
 }
 .blockRestaurants h1 {
   margin: 0px;
-  padding: 30px 35px 0px 35px;
+  padding: 30px 0px 0px 35px;
+}
+.blockRestaurants .cardsSection {
+  padding: 30px 35px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.blockRestaurants .cardsSection__card {
+  box-shadow: 2px 4px 15px rgba(153, 153, 153, 0.5);
+  border-radius: 15px;
+}
+.blockRestaurants .cardsSection__card__top {
+  display: flex;
+  justify-content: flex-end;
+  height: 200px;
+  width: 100%;
+}
+.blockRestaurants .cardsSection__card__top img {
+  border-radius: 15px 15px 0px 0px;
+  width: 100%;
+  object-fit: cover;
+}
+.blockRestaurants .cardsSection__card__top h3 {
+  position: absolute;
+  margin: 5%;
+  color: #278870;
+  font-size: 15px;
+  background-color: #99E2D0;
+  padding: 5px 10px;
+  border-radius: 3px;
+}
+.blockRestaurants .cardsSection__card__top--labelVisible {
+  visibility: visible;
+}
+.blockRestaurants .cardsSection__card__top--labelHidden {
+  visibility: hidden;
+}
+.blockRestaurants .cardsSection__card__bottom {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 15px 10px;
+}
+.blockRestaurants .cardsSection__card__bottom__right {
+  margin: auto 5px;
+}
+.blockRestaurants .cardsSection__card__bottom__right i:hover {
+  color: linear-gradient(163deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
 }
 
 /*# sourceMappingURL=style.css.map */
