--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -45,7 +45,7 @@ $tertiaryColor: #99E2D0 !default;
 
 /// Wrapper padding home
 /// @type Length
-$padding-home: 30px;
+$padding-home: 35px;
 
 
 /// Container's maximum width
