--- a/sass/layout/_blockExplore.scss
+++ b/sass/layout/_blockExplore.scss
@@ -13,7 +13,6 @@
     button{
         color: white;
         border: 0px;
-        background: rgb(255,121,218);
         background: linear-gradient(163deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
         box-shadow: 0px 0px 10px $mid-grey;
         font-size: 85%;
