--- a/sass/layout/_blockFonctionnement.scss
+++ b/sass/layout/_blockFonctionnement.scss
@@ -14,12 +14,16 @@
             border-radius: 15px;
             padding: 15px 10px;
             background: $light-grey;
+            position: relative;
 
             p{
+                width: 20px;
+                height: 20px;
                 margin-top: 4px;
                 position: absolute;
                 font-size: 10px;
-                left: 20px;
+                left: -10px;
+                top: calc(50% - 13px);
                 color: white;
                 background: $primaryColor;
                 padding:3px 7px;
